[gd_scene load_steps=4 format=3 uid="uid://o8m0ik4qpslb"]

[ext_resource type="Script" uid="uid://vtbfbd7cnogy" path="res://main_menu.gd" id="1_06t4h"]

[sub_resource type="Gradient" id="Gradient_7vrkn"]
colors = PackedColorArray(0.386375, 0.461112, 1, 1, 0.29219, 0.29219, 0.29219, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fu7sn"]
gradient = SubResource("Gradient_7vrkn")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_fu7sn")

[node name="Title" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 411.0
offset_top = 88.0
offset_right = -410.0
offset_bottom = -454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.345098, 0.345098, 0.345098, 0.678431)

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -52.0
offset_right = 165.5
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "PlaceholderTitle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -296.0
offset_right = 86.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
text = "Play"

[node name="ColorRect" type="ColorRect" parent="PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.345098, 0.345098, 0.345098, 0.552941)

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -216.0
offset_right = 86.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 0
text = "Credits
"

[node name="ColorRect" type="ColorRect" parent="CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.345098, 0.345098, 0.345098, 0.552941)

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -135.0
offset_right = 86.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.345098, 0.345098, 0.345098, 0.552941)

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
